--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,5 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,python
+
+exercises-and-weights.csv
