feat: Added config file support. Config file is now required to run the program.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ authors = [
 ]
 license = { file = "LICENSE" }
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "pyyaml>=6.0.2",
+]
