--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,python
 
 exercises-and-weights.csv
+config.yaml
