--- a/.gitignore
+++ b/.gitignore
@@ -227,6 +227,6 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,python
 
-exercises-and-weights.csv
 config.yaml
+database.csv
 test.csv
