--- a/.github/workflows/build-universal.yml
+++ b/.github/workflows/build-universal.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up universal2 Python from python.org
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13' # 3.11+ from python.org are universal2
+          python-version: '3.13'
 
       - name: Ensure pip, wheel, setuptools are up to date
         run: python -m pip install --upgrade pip setuptools wheel
