--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,11 @@ authors = [
 license = { file = "LICENSE" }
 requires-python = ">=3.13"
 dependencies = [
+    "pydantic>=2.11.7",
     "pyyaml>=6.0.2",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
 ]
