--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = { file = "LICENSE" }
 requires-python = ">=3.13"
 dependencies = [
     "pydantic>=2.11.7",
+    "pyqt6>=6.9.1",
     "pyyaml>=6.0.2",
 ]
 
