--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,8 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
+    "rhythm-trainer",
 ]
+
+[tool.uv.sources]
+rhythm-trainer = { workspace = true }
