--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 license = { file = "LICENSE" }
 requires-python = ">=3.13"
 dependencies = [
+    "platformdirs>=4.3.8",
     "pydantic>=2.11.7",
     "pyqt6>=6.9.1",
     "pyyaml>=6.0.2",
