--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,16 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
 ]
+
+[tool.pytest.ini_options]
+addopts = "-ra -q --cov=rhythm_trainer --cov-report=html"
+testpaths = ["tests"]
+
+# [tool.ruff.lint.per-file-ignores]
+# "tests/**/*.py" = [
+#     "S101",  # Ignore use of assert in tests
+#     "ARG",   # flake8-unused-arguments
+#     "FBT",   # flake8-boolean-trap
+# ]
