--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,19 @@ dev = [
 addopts = "-ra -q --cov=rhythm_trainer --cov-report=html"
 testpaths = ["tests"]
 
+# [tool.ruff]
+# line-length = 88
+# indent-width = 4
+
+# [tool.ruff.format]
+# quote-style = "double"
+# indent-style = "space"
+# skip-magic-trailing-comma = false
+# line-ending = "auto"
+
+# [tool.ruff.lint]
+# ignore = ["G004"]
+
 # [tool.ruff.lint.per-file-ignores]
 # "tests/**/*.py" = [
 #     "S101",  # Ignore use of assert in tests
