--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ license = { file = "LICENSE" }
 requires-python = ">=3.13"
 dependencies = [
     "platformdirs>=4.3.8",
-    "pydantic>=2.11.7",
     "pyqt6>=6.9.1",
     "pyyaml>=6.0.2",
 ]
@@ -29,6 +28,7 @@ build-backend = "hatchling.build"
 dev = [
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
+    "pytest-qt>=4.5.0",
 ]
 
 [tool.pytest.ini_options]
